<?xml version="1.0" encoding="utf-8"?>
<hollis.inman.polydemo.ui.main.utils.SlidingRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.view.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/DefaultCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_horizontal_margin">

                <Button
                    android:id="@+id/btn_edit"
                    style="@style/DefaultButton"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/family_member_edit_profile"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_email" />

                <ImageView
                    android:id="@+id/img_primary_phone"
                    android:layout_width="@dimen/profile_icon_width"
                    android:layout_height="@dimen/profile_icon_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/ic_vector_phone_outline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_service_area_icon" />

                <ImageView
                    android:id="@+id/img_email"
                    android:layout_width="@dimen/profile_icon_width"
                    android:layout_height="@dimen/profile_icon_height"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/ic_vector_mail"
                    app:layout_constraintStart_toStartOf="@+id/img_primary_phone"
                    app:layout_constraintTop_toBottomOf="@+id/img_primary_phone" />

                <ImageView
                    android:id="@+id/img_service_area_icon"
                    android:layout_width="@dimen/profile_icon_width"
                    android:layout_height="@dimen/profile_icon_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/ic_vector_map"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_user_avatar" />

                <TextView
                    android:id="@+id/txt_first_name"
                    style="@style/DefaultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/family_first_name_hint"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/img_user_avatar"
                    app:layout_constraintTop_toTopOf="@+id/img_user_avatar" />

                <TextView
                    android:id="@+id/txt_last_name"
                    style="@style/DefaultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/family_last_name_hint"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/img_user_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/txt_first_name" />

                <TextView
                    android:id="@+id/txt_family_member_type"
                    style="@style/DefaultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_member_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/txt_service_area_desc"
                    style="@style/DefaultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/profile_service_area_desc"
                    android:textAppearance="@style/DefaultSmallTextView"
                    app:layout_constraintBottom_toBottomOf="@+id/img_service_area_icon"
                    app:layout_constraintStart_toEndOf="@+id/img_service_area_icon"
                    app:layout_constraintTop_toTopOf="@+id/img_service_area_icon" />

                <TextView
                    android:id="@+id/txt_primary_phone"
                    style="@style/DefaultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/family_member_primary_phone_placeholder_text"
                    app:layout_constraintBottom_toBottomOf="@+id/img_primary_phone"
                    app:layout_constraintStart_toEndOf="@+id/img_primary_phone"
                    app:layout_constraintTop_toTopOf="@+id/img_primary_phone" />

                <TextView
                    android:id="@+id/txt_email"
                    style="@style/DefaultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/family_member_email_demo"
                    app:layout_constraintBottom_toBottomOf="@+id/img_email"
                    app:layout_constraintStart_toEndOf="@+id/img_email"
                    app:layout_constraintTop_toTopOf="@+id/img_email" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_user_avatar"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:background="@color/colorBorders"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_vector_user" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</hollis.inman.polydemo.ui.main.utils.SlidingRelativeLayout>