<?xml version="1.0" encoding="utf-8"?>
<hollis.inman.polydemo.ui.main.utils.SlidingRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.edit.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_horizontal_margin"
                style="@style/DefaultCardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_horizontal_margin">


                    <EditText
                        android:id="@+id/etxt_first_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/default_edit_text"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/family_first_name_hint"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:windowSoftInputMode="adjustPan"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_edit_user_avatar" />

                    <EditText
                        android:id="@+id/etxt_middle_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:ems="10"
                        android:background="@drawable/default_edit_text"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:hint="@string/family_middle_name_hint"
                        android:windowSoftInputMode="adjustPan"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/etxt_first_name"
                        app:layout_constraintTop_toBottomOf="@+id/etxt_first_name" />

                    <EditText
                        android:id="@+id/etxt_last_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:ems="10"
                        android:background="@drawable/default_edit_text"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:hint="@string/family_last_name_hint"
                        android:windowSoftInputMode="adjustPan"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/etxt_middle_name"
                        app:layout_constraintTop_toBottomOf="@+id/etxt_middle_name" />

                    <EditText
                        android:id="@+id/etxt_primary_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:ems="10"
                        android:background="@drawable/default_edit_text"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:hint="@string/family_primary_phone_number_hint"
                        android:inputType="phone"
                        android:windowSoftInputMode="adjustPan"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/etxt_last_name"
                        app:layout_constraintTop_toBottomOf="@+id/etxt_last_name" />

                    <EditText
                        android:id="@+id/etxt_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/default_edit_text"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/family_email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:windowSoftInputMode="adjustPan|adjustResize"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/etxt_primary_phone"
                        app:layout_constraintTop_toBottomOf="@+id/etxt_primary_phone" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/img_edit_user_avatar"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:background="@color/colorBorders"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_vector_user" />

                    <Button
                        android:id="@+id/btn_save"
                        style="@style/DefaultButton"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="48dp"
                        android:text="@string/family_member_save_profile"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etxt_email" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</hollis.inman.polydemo.ui.main.utils.SlidingRelativeLayout>